--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                             id="khong"
                             value="khong"
                         />
-                        <label for="khong">Không</label>
+                        <label for="khong">Không đạt</label>
                     </div>
                     <div>
                         <input type="radio" name="suckhoe" id="co" value="co" />
-                        <label for="co">Có</label>
+                        <label for="co">Đạt</label>
                     </div>
                 </div>
 
